--- a/main_app/templates/task/task_update_form.html
+++ b/main_app/templates/task/task_update_form.html
@@ -356,11 +356,11 @@
                           <form method="POST">
                               {% csrf_token %}
                               <fieldset class="form-group">
-                                  <legend class="border-bottom mb-4">Add Task</legend>
+                                  <legend class="border-bottom mb-4">Edit Task</legend>
                                   {{ form | crispy }}
                               </fieldset>
                               <div class="form-group">
-                                  <button class="btn btn-outline-info" type="submit">Submit</button></div>
+                                  <button class="btn btn-outline-info" type="submit">Update</button></div>
                           </form>
                   </div>
                   </div>
